REST: Replace patched-descriptions-invalid-language-code
The new generalized error code is 'patch-result-invalid-key'.

Bug: T370849
